Statisches Hintergrundbild (vorübergehend)

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -53,7 +53,7 @@
       }
     </script>
   </head>
-  <body class="bg-gray-900 min-h-screen">
+  <body class="min-h-screen">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
