--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,11 @@
     
     <!-- Local Fonts -->
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts.css">
+    
+    <!-- Leaflet CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
